--- a/Dockerfile-app
+++ b/Dockerfile-app
@@ -7,6 +7,11 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY src/ .
 
+# Create non-root user for security
+RUN useradd --create-home --shell /bin/bash appuser && \
+    chown -R appuser:appuser /app
+USER appuser
+
 EXPOSE 5001
 
 # Use Gunicorn as the production WSGI server
